--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		</style>
 	</head>
 	<body>
-        <script type="module" src="main.js"></script>
+        <script type="module" src="js/main.js"></script>
         <div id="canvas3d"></div>
 	</body>
 </html>
