Disable manual spawn and disclose atom hints

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 			<div class="vgrid">
 				<div class="row1 info">A/D - Move</div>
 				<div class="row1 info">F - Toggle Camera</div>
+				<div class="row1 info">H - Show/Hide Atoms</div>
 				<div class="row1 info">Click - Place Guess</div>
 				<button id="reset-btn">RESET</button>
 			</div>
